--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ div.index_first_banner{
   justify-content: center;
   align-items: center;
 }
-
+ 
 
 
 div.index_first_banner_content{
@@ -174,6 +174,29 @@ div.step_direction{
   line-height: 200%;
   letter-spacing: 0.04em;
   padding-bottom: 30px;
+}
+
+button.btn-secondary{
+  background-color: #2869D1;
+  padding: 6px 20px 7px;
+  border-radius: 8px;
+  color: white;
+  text-decoration: none;
+  letter-spacing: 0.04em;
+  border: none;
+  margin-left: -15px;
+  margin-top: -30px;
+}
+
+
+button.btn-secondary:hover{
+  box-shadow: 1px 2px 2px 0px #00000040;
+  background-color: #2869D1;
+}
+
+button.btn-secondary:active{
+  box-shadow: 1px 2px 2px 0px #00000040;
+  background-color: #2869D1;
 }
 
 a.step_one_btn{
@@ -365,7 +388,7 @@ div.join_us_slogan{
   letter-spacing: 0.1em;
 }
 
-a.join_us_btn{
+button.btn-last{
   background-color: #2869D1;
   padding: 6px 18px 8px;
   border-radius: 8px;
@@ -374,10 +397,12 @@ a.join_us_btn{
   text-align:center;
   letter-spacing: 0.1em;
   font-size: 15px;
+  margin-top: -20px;
 }
 
-a.join_us_btn:hover{
+button.btn-last:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
+  color: white;
 }
 
 img.standing_bird{
