個人方案按鈕更新

--- a/css/personal.css
+++ b/css/personal.css
@@ -4,7 +4,7 @@
 *{
   box-sizing: border-box;
 }
-
+ 
 body{
   margin: 0;
   padding: 0;
@@ -272,12 +272,18 @@ button.back_to_feature{
   background-color: #eeeeee;
   border: none;
   padding: 8px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   box-shadow: 1px 2px 2px 0px #00000040;
 }
 
 img.angle_up{
   width: 16px;
+  padding-bottom: 5px;
+  /* border: 1px solid red; */
+  margin-bottom: 8px;
+  padding-right: 1px;
 }
 
 
