--- a/css/modal2.css
+++ b/css/modal2.css
@@ -7,8 +7,7 @@
   }
   
   .modal-backdrop{
-    z-index:0;
-    
+    z-index:2;
     }
  
   button.btn-primary{
@@ -23,6 +22,11 @@
     width: 78px;
   }
 
+  button.btn-primary:active, button.btn-primary:focus{
+    border: none;
+    outline: none;
+  }
+
   button.btn_login{
     border: 1px solid black;
     background: none;
@@ -32,8 +36,22 @@
     width: 75px;
   } 
 
+  button.btn_login:focus{
+    border: 1px solid black;
+    background: none;
+    color: black;
+    padding: 6px 15px 7px;
+    height: 38px;
+    width: 75px;
+    outline: none;
+  } 
+
   button.btn-primary:hover{
     box-shadow: 1px 2px 2px 0px #00000040;
+  }
+
+  button.btn-primary:focus, button.btn-primary:active{
+    outline: none;
   }
 
   button.btn_login:hover{
@@ -79,6 +97,11 @@
     position: absolute;
     top: 10px;
     right: 10px;
+  }
+
+  button.close:focus{
+    border: none;
+    outline: none;
   }
 
   div.other_login{
@@ -203,7 +226,7 @@
   a.login_help{
     color: #2869D1;
   }
-
+ 
   button.btn_modal_close{
     outline: none;
     border: none;
