--- a/css/personal.css
+++ b/css/personal.css
@@ -52,7 +52,7 @@ div.shift_btn{
   width: 920px;
   margin: 0 auto;
   padding-left: 30px;
-  z-index: 1;
+  z-index: 0;
   position: relative;
 }
 
@@ -77,14 +77,26 @@ button.btn1:hover, button.btn2:hover, button.btn3:hover{
   color: white;
 }
 
+button.btn1:focus, button.btn2:focus, button.btn3:focus{
+  border: none;
+  outline: none;
+}
+
+button.btn1:active, button.btn2:active, button.btn3:active{
+  border: none;
+  outline: none;
+}
+
 button.btn1.-on, button.btn2.-on, button.btn3.-on{
   transform: translateY(0px);
   background-color: #2869D1;
   color: white;
+  border: none;
+  outline: none;
 }
 
 div.personal_slides_container{
-  z-index: 5;
+  z-index: 1;
   position: relative;
 }
 
@@ -93,14 +105,14 @@ div.content1, div.content2, div.content3{
   top: 0;
   left: 80px;
   opacity: 0;
-  z-index: -1;
+  z-index: -4;
   transition: opacity .5s;
 }
 
 div.content1.-on, div.content2.-on, div.content3.-on{
   position: static;
   opacity: 1;
-  z-index: 1;
+  z-index: -3;
 }
 
 embed.personal_slide{
@@ -328,17 +340,18 @@ img.line{
   transform: translate(-115%, -785%);
 }
 
-a.btn_action{
+button.btn_act{
   background-color: #2869D1;
-  padding: 6px 60px 8px;
+  padding: 6px 18px 8px;
   border-radius: 8px;
   color: white;
   text-decoration: none;
   text-align:center;
   letter-spacing: 0.1em;
   font-size: 15px;
-}
+  width: 115px;
+} 
 
-a.btn_action:hover{
+button.btn_act:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
 }
