--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -7,7 +7,7 @@
 *{
   box-sizing: border-box;
 }
-
+ 
 body{
   margin: 0;
   padding: 0;
@@ -127,7 +127,7 @@ button.search_btn{
   height: 30px;
   cursor: pointer;
   position: relative;
-  transform: translateX(-100%);
+  transform: translate(-100%, -10%);
 }
 
 img.search{
