--- a/css/community.css
+++ b/css/community.css
@@ -19,7 +19,7 @@ div.left_dialog_container{
   justify-content: flex-start;
   color: white;
   position: relative;
-  z-index: 1;
+  z-index: -1;
 }
 
 
@@ -45,7 +45,7 @@ div.right_dialog_container{
   display: flex;
   justify-content: flex-end;
   color: white;
-  z-index: 0;
+  z-index: -2;
 }
 
 div.right_dialog_container::after{
@@ -140,7 +140,7 @@ div.intro_content{
 }
 
 img.scroll_down{
-  width: 120px;
+  width: 80px;
 }
 
 div.intro_title{
@@ -473,7 +473,7 @@ div.soc{
   justify-content: center;
   cursor: pointer;
   transition: opacity .3s;
-}
+} 
 
 a.soc{
   margin-top: 40px;
@@ -600,7 +600,9 @@ a.travel:hover div.travel{
 
 div.more_info_block{
   margin: 0 auto 60px;
-  width: 100px;
+  width: 1080px;
+  display: flex;
+  justify-content: center;
 }
 
 a.more_info{
@@ -613,10 +615,19 @@ a.more_info{
 div.last_banner{
   width: 1080px;
   margin: 90px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 div.last_slogan{
   padding-left: 15px;
+}
+
+div.last{
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
 }
 
 button.btn_act{
