--- a/css/personal.css
+++ b/css/personal.css
@@ -131,7 +131,7 @@ div.personal_feature_slogan{
   text-align: center;
   border-bottom: 1px solid black;
   padding: 10px 0 40px;
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 700;
   letter-spacing: 0.04em;
 }
@@ -155,7 +155,7 @@ div.feature_title, div.feature_subtitle, div.feature_content{
 }
 
 div.feature_title{
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 700;
   position: relative;
   transform: translateY(8px);
@@ -191,6 +191,10 @@ button.feature_btn1, button.feature_btn2, button.feature_btn3{
 
 button.feature_btn1:hover, button.feature_btn2:hover, button.feature_btn3:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
+}
+
+button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
+  outline: none;
 }
 
 
@@ -273,9 +277,14 @@ button.btn_left, button.btn_right{
   box-shadow: 1px 2px 2px 0px #00000040;
 }
 
+button.btn_left:active, button.btn_right:active{
+  outline: none;
+}
+
 button.btn_left.-on, button.btn_right.-on{
   background-color: #363B3F;
   opacity: 1;
+  outline: none;
 }
 
 button.back_to_feature{
@@ -337,7 +346,7 @@ img.bird_flying{
 img.line{
   width: 500px;
   position: relative;
-  transform: translate(-115%, -785%);
+  transform: translate(-115%, -700%);
 }
 
 button.btn_act{
