--- a/css/modal2.css
+++ b/css/modal2.css
@@ -7,7 +7,7 @@
   }
   
   .modal-backdrop{
-    z-index:20;
+    z-index:2;
     width: 100%;
     height: 100%;
     }
@@ -66,6 +66,13 @@
   div.modal{
     box-shadow: 0 0 10px #ddd;
     border-radius: 20px;
+    padding: 0;
+  }
+
+  
+
+  div.modal-dialog{
+    z-index: 30;
   }
 
   div.modal-content{
@@ -74,6 +81,7 @@
     /* justify-content: center;
     align-items: center; */
     margin: 0 auto;
+    max-width: 100%;
   }
 
   div.modal-header{
@@ -169,10 +177,10 @@
   button.btn_signup:hover{
     box-shadow: 1px 2px 2px 0px #00000040;
   }
-
+ 
   div.other_login{
     height: 180px;
-    width: 100%;
+    width: 73%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -190,7 +198,7 @@
     outline: none;
     border: none;
     margin: 5px 0;
-    width: 73%;
+    width: 100%;
     border-radius: 10px;
     padding: 5px 0 5px 12px;
     display: flex;
@@ -245,4 +253,8 @@
     color: #2869D1;
     padding: 0;
     font-weight: 700;
+  }
+
+  #myModal1{
+    padding: 0;
   }
